# dmasm

./: Cargo.toml  DMASM Specification.md  out.txt
src/: access_modifiers.rs  assembler.rs  compiler.rs  disassembler.rs  instructions.rs  lib.rs  list_operands.rs  opcodes_unused.rs  operands.rs  operands_deserialize.rs  parser.rs
src/compiler/: args.rs  assignment.rs  binary_ops.rs  builtin_procs.rs  chain_builder.rs  follow.rs  strings.rs  term.rs  ternary.rs  unary.rs
src/dmb/: loader.rs
src/dmb/loader/: nqcrc.rs  xorjump.rs
