[package]
name = "dmasm"
version = "0.1.0"
authors = ["William Wallace <me@wiox.me>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nom = "7.1.3"
bitflags = "1.2.1"
dreammaker = { git = "https://github.com/willox/SpacemanDMM", branch = "fixes" }
