[package]
name = "dmasm"
version = "0.1.0"
authors = ["William Wallace <me@wiox.me>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nom = "7"
bitflags = "2"
dreammaker = { git = "https://github.com/SpaceManiac/SpacemanDMM", tag = "suite-1.9" }
