[package]
name = "dmasm"
version = "0.1.0"
authors = ["Sophie Wallace <sophie@wiox.me>"]
edition = "2018"
license = "GPL-3.0"
repository = "https://github.com/willox/dmasm"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nom = "7"
bitflags = "2"
dreammaker = { git = "https://github.com/SpaceManiac/SpacemanDMM", rev = "d6bcdd50d1532571715e24b006482094d78c1ba5" }
